Bugfix: Show filter button on small display. Call scroll event at 1.5

--- a/client/app/sass/app.css
+++ b/client/app/sass/app.css
@@ -3311,14 +3311,15 @@ md-toast.md-error-toast-theme {
         margin-left: 4px; }
   #ely-recommendation-popular-overview .ely-sidenav-right {
     height: 100%;
-    width: 200px; }
-    @media screen and (min-width: 1440px) {
-      #ely-recommendation-popular-overview .ely-sidenav-right {
-        width: 250px; } }
+    width: 250px; }
   #ely-recommendation-popular-overview .filter-fab {
     position: fixed;
     bottom: 0;
     right: 0; }
+    @media screen and (min-width: 960px) {
+      #ely-recommendation-popular-overview .filter-fab {
+        bottom: 15px;
+        right: 24px; } }
 
 .ely-recommendation-popular-column {
   height: 100%;
